Finished updating CSRF token tags in all forms in Index and Details.

--- a/templates/users/index.jinja
+++ b/templates/users/index.jinja
@@ -36,9 +36,11 @@
                 </button>
               </form>
               {% else %}
-              <form method="POST"
-                    action="/users/follow/{{ user.id }}">
-                <button class="btn btn-outline-primary btn-sm">
+              <form>
+                    {{ g.csrf_form.hidden_tag() }}
+                  <button class="btn btn-outline-primary btn-sm"
+                  formmethod="POST"
+                  formaction="/users/follow/{{ user.id }}">
                   Follow
                 </button>
               </form>
